--- a/course/templates/course/module.html
+++ b/course/templates/course/module.html
@@ -6,9 +6,7 @@
 {% block title %}{{ block.super }}: {{ module }}{% endblock %}
 
 {% block siblings %}
-{% with next=module.next previous=module.previous %}
-{% include "course/_siblings.html" %}
-{% endwith %}
+{% include "course/_siblings.html" with next=module.next previous=module.previous %}
 {% endblock %}
 
 {% block breadcrumblist %}
@@ -46,7 +44,7 @@
 	{% endif %}
 
   {% with open=module.is_after_open %}
-  {% include 'course/_module_toc.html' %}
+  {% include 'course/_module_toc.html' with objects=module.flat_learning_objects %}
   {% endwith %}
 
 {% endblock %}
