--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -16,9 +16,19 @@
 <div class="col-md-12">
 
     <ul class="nav nav-tabs">
+        <li role="presentation" class="menu-course-clone">
+            <a href="{{ instance|url:'course-clone' }}">
+                {% trans "Instances" %}
+            </a>
+        </li>
         <li role="presentation" class="menu-course-details">
             <a href="{{ instance|url:'course-details' }}">
                 {% trans "Course" %}
+            </a>
+        </li>
+        <li role="presentation" class="menu-course-index">
+            <a href="{{ instance|url:'course-index' }}">
+                {% trans "Index" %}
             </a>
         </li>
         <li role="presentation" class="menu-edit-content">
