Add JSON configuration

--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -30,6 +30,7 @@
           <span class="label label-default">{% trans 'hidden' %}</span>
           {% endif %}
         </td>
+        <td>{{ ci.url }}</td>
         <td>{{ ci.starting_time }} &ndash; {{ ci.ending_time }}</td>
       </tr>
       {% endfor %}
