--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -10,6 +10,14 @@
 
 {% block coursecontent %}
 <br>
+<form method="post" class="well form-inline" action="{{ instance|url:'course-configure' }}">
+  {% csrf_token %}
+  <div class="form-group">
+    <label class="control-label" for="id_url">{% trans 'Import and override content configuration from URL' %}</label>
+    <input type="text" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
+  </div>
+  <button class="btn btn-primary" type="submit">{% trans 'Apply' %}</button>
+</form>
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">{% trans "Exercise categories" %}</h3>
