--- a/access/templates/access/graded_form.html
+++ b/access/templates/access/graded_form.html
@@ -6,7 +6,7 @@
 		{% if field.field.set_title %}<legend>{{ field.field.set_title }}</legend>{% endif %}
 	{% endif %}
 
-		<div class="form-group">
+		<div class="form-group{% if field.errors %} has-error{% endif %}">
 			{% if field.field.choice_list %}
 			<label>{{ field.label }}</label>
 			{% else %}
@@ -28,6 +28,16 @@
 			{% endfor %}
 			{% else %}
 			{{ field }}
+			{% endif %}
+
+			{% if field.errors %}
+			<div class="alert alert-danger">
+				{{ field.errors }}
+			</div>
+			{% endif %}
+
+			{% if field.field.hints %}
+			{{ field.field.hints }}
 			{% endif %}
 		</div>
 	{% if field.field.close_set %}
