--- a/templates/403.html
+++ b/templates/403.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>403 Forbidden</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     </head>
     <body>
         <div class="container-fluid">
