--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -55,12 +55,12 @@
 <script src="{% static 'exercise/chapter.js' %}"></script>
 <script>
 // Visualize loading in case of slow POST operations.
-$(function() {
+/*$(function() {
     var forms = $("#exercise").find("form:not([data-aplus-exercise] form)");
     forms.on("submit", function(event) {
         $("#submit-progress").removeClass("hide");
     });
-});
+});*/
 
 // Add an Ajax exercise event listener to refresh the info column.
 window.addEventListener("message", function (event) {
