--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -38,7 +38,7 @@
             <td>
                 {{ submission.grade }}
                 {% if submission.assistant_feedback %}
-                <span class="label label-warning">{% trans 'A.Feedback' %}</span>
+                <span class="label label-warning">{% trans 'Assistant' %}</span>
                 {% endif %}
             </td>
             <td>
