--- a/templates/404.html
+++ b/templates/404.html
@@ -18,7 +18,7 @@
                     <div class="alert alert-danger">
                         {% blocktrans %}
                         For an unknown reason you arrived somewhere that does not exist.
-                        Please try again.
+                        Please, try again.
                         {% endblocktrans %}
                     </div>
                 </div>
