--- a/userprofile/templates/userprofile/privacy.html
+++ b/userprofile/templates/userprofile/privacy.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{{ block.super }} {% trans "Privacy policy" %}{% endblock %}
+{% block title %}{{ block.super }} {% trans "Privacy Policy" %}{% endblock %}
 
 {% block content %}
 
