--- a/exercise/templates/exercise/_submission_info.html
+++ b/exercise/templates/exercise/_submission_info.html
@@ -22,7 +22,7 @@
             <dd>
                 {{ submission.grade }} / {{ exercise.max_points }}
                 {% if is_course_staff and exercise.max_points != submission.service_max_points %}
-                <br />({% trans "nonscaled" %} {{ submission.service_points }} / {{ submission.service_max_points }})
+                <br />({% trans "For staff: original" %} {{ submission.service_points }} / {{ submission.service_max_points }})
                 {% endif %}
             </dd>
 
