--- a/notification/templates/notification/_notification_menu.html
+++ b/notification/templates/notification/_notification_menu.html
@@ -4,11 +4,8 @@
 <li role="presentation" class="menu-notification">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
         <span class="glyphicon glyphicon-envelope pull-left" aria-hidden="true"></span>
-
-        {% blocktrans with count=unread.count count_p=unread.count|pluralize %}
-        <span class="badge badge-danger">{{ count }}</span> new notification{{ count_p }}
+        <span class="badge badge-danger">{{ unread.count }}</span> {{ unread_message }}
         <span class="caret" aria-hidden="true"></span>
-        {% endblocktrans %}
         <ul class="dropdown-menu">
             {% for notification in unread.notifications %}
             <li><a href="{{ notification.course_instance|url:'notifications' }}" class="alert-link">
