--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -4,7 +4,7 @@
 {% load exercise %}
 {% load apps %}
 
-{% block title %}{{ block.super }}: {% trans "Exercise" %} {{ module.order }}.{{ exercise.order }}{% endblock %}
+{% block title %}{{ block.super }}: {{ exercise }}{% endblock %}
 
 {% block siblings %}
 {% include "course/_siblings.html" with next=exercise.next previous=exercise.previous %}
